# keyspeed

./: .gitignore  .lintstagedrc.json  .prettierignore  AGENTS.md  Makefile  README.md  SPEC.md  components.json  eslint.config.ts  index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: prepare-sidecar.mjs
src/: app.tsx  main.tsx  overlay-app.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  schema.sql  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  runner.rs  settings.rs  startup.rs  storage.rs
src/components/: add-profile-dialog.tsx  app-sidebar.tsx  title-bar.tsx
src/components/ui/: awesome-tabs.tsx
src/features/account/: account-page.tsx  profile-dialog.tsx
src/features/app-state/: queries.ts  types.ts
src/features/history/: delete-history-button.tsx  history-details-dialog.tsx  history-page.tsx  table-columns.tsx  types.t.ts
src/features/home-page/: home-page.tsx
src/features/models/: models-page.tsx
src/features/models/components/: local-llms-section.tsx  remote-llm-dialog.tsx  remote-llms-section.tsx  whisper-models-section.tsx
src/features/overlay/: overlay-state.tsx
src/features/overview/: overview-metrics.tsx  overview-page.tsx  overview-parts.tsx
src/features/profile/: hybrid-mode-view.tsx  local-mode-view.tsx  no-profile-page.tsx  online-mode-view.tsx  profile-page.tsx
src/features/session-history/: index.tsx  session-history-page.tsx
src/features/settings/: settings-page.tsx
src/features/tests/: test-page.tsx
src/store/config-store/: config-schema.ts  use-config-store.ts
(+11 files in other folders)
