[package]
name = "keyspeed-ui"
version = "0.1.0"
description = "Keyspeed desktop dashboard"
authors = ["you"]
edition = "2021"
default-run = "typing-ui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keyspeed_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
runner-binary = []

[[bin]]
name = "typing-ui"
path = "src/main.rs"

[[bin]]
name = "typing-runner"
path = "src/bin/typing-runner.rs"
required-features = ["runner-binary"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
rdev = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
